Add Justfile and run code fmt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,8 @@ testpaths = [
     "packages",
 ]
 DJANGO_SETTINGS_MODULE = "django_lenskit_audit.tests.settings"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.8",
+]
